# naoto-bot

./: .gitignore  Cargo.toml  README.md
nekos/: Cargo.toml
nekos/src/: lib.rs
src/: commands.rs  main.rs  utils.rs
src/commands/: about.rs  coinflip.rs  dice.rs  eightball.rs  ferrissays.rs  hug.rs  mod.rs  nekoslife.rs  ping.rs  pride.rs  spoiler.rs  zip.rs
