[package]
name = "naoto-bot"
version = "0.1.0"
authors = ["hyarsan"]
edition = "2018"
description = "A Discord bot written in Rust using Serenity."
license = "GPL-3.0+"

[dependencies]
rand = "0.7.0"
toml = "0.5.1"
unicode-segmentation = "1.3.0"
reqwest = { version = "0.9.18", default-features = false, features = ["rustls-tls"] }
base64 = "0.10.1"
# percent-encoding = "1.0.1"
# sled = "0.21.3"
zip = "0.5.2"
random_color = "0.4.4"
serde_json = "1.0.40"
ferris-says = "0.1.1"
itertools = "0.8.0"
lenient_bool = "0.1.1"
enum-iterator = "0.3.0"
voca_rs = "1.7.0"
# lazy_static = "1.3.0"
serde = { version = "1.0.94", features = ["derive"] }
nekos = { path = "nekos" }
serenity = "0.6.2"
image = { git = "https://github.com/image-rs/image" }
