[package]
name = "nekos"
version = "0.1.0"
authors = ["hyarsan"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9.18", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.40"
regex = "1.1.8"
# rhttp_massreq = { git = "http://gitlab.nebulanet.cc/xacrimon/rhttp_massreq.git" }
